Revert "Fixed the overlapping on scroll of login page."

--- a/style.css
+++ b/style.css
@@ -1584,13 +1584,12 @@ input[type="number"]::-webkit-inner-spin-button {
 
 
 .footer {
-  padding: 40px;
+  padding: 20px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('./images/istockphoto-1465642013-170667a.webp');
   background-size: cover; /* Ensure the background image covers the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
   color: #fff;
-  height: 190px;
 }
 
 
